Simulation for probability implemented

--- a/probability.html
+++ b/probability.html
@@ -46,8 +46,9 @@
         <div align="center">
           <p>Monte Carlo simulation results</p>
           <p id="simulation_loading" style="display: none">Loading...</p>
-          <p id="simulation_text"></p>
+          <p id="simulation_upper_text"></p>
           <div id="simulation_chart"></div>
+          <p id="simulation_lower_text"></p>
         </div>
       </td>
     </tr>
