--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h2>Minecraft pickaxe calculator</h2>
-    <p>Calculate probability of not breaking pickaxe after mining specific amount of blocks</p>
+    <p>Calculate probability of not breaking pickaxe after mining specified amount of blocks</p>
     <a href="probability.html"><button>Go</button></a>
 
-    <p>Calculate how many blocks can pickaxe mine with specific confidence level</p>
+    <p>Calculate how many blocks can pickaxe mine with specified confidence level</p>
     <a href="confidence.html"><button>Go</button></a>
 </body>
 </html>
