--- a/confidence.html
+++ b/confidence.html
@@ -4,8 +4,54 @@
     <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width,initial-scale=1" />
       <title>MC pickaxe calculator</title>
+      <link rel="stylesheet" href="https://pyscript.net/releases/2025.5.1/core.css">
+      <script type="module" src="https://pyscript.net/releases/2025.5.1/core.js"></script>
 </head>
 <body>
-    <p>In development...</p>
+  <h2>Minecraft pickaxe calculator</h2>
+  <p>Calculate how many blocks can pickaxe mine with specified confidence level</p>
+  <table width="100%" border="">
+    <tr>
+      <td>
+        <p>Enter pickaxe durability:</p>
+        <input type="number" min="1" step="1" name="durability_input" id="durability_input"/>
+
+        <p>Enter unbreaking enchantment level: from 1 to 3</p>
+        <input type="number" min="1" max="3" step="1" name="unbreaking_input" id="unbreaking_input"/>
+
+        <p>Enter confidence level in percents: from 0.1 to 100</p>
+        <input type="number" min="0.1" max="100" placeholder="95% by default" name="confidence_input" id="confidence_input"/>
+      </td>
+      <td style="vertical-align: top">
+        <p>Enter number of experiments for the simulation: (optional)</p>
+        <input type="number" min="1" step="1" name="num_of_experiments_input" id="num_of_experiments_input" placeholder="5000 by default"/>
+
+        <br><br>
+        <button py-click="run_all_calculations">Calculate</button>
+
+        <p style="color: red" id="error_message"></p>
+      </td>
+    </tr>
+    <tr align="center">
+      <td width="50%">
+        <div align="center">
+          <p>Precise calculations (using formulas)</p>
+          <p id="precise_upper_text"></p>
+          <div id="precise_chart"></div>
+          <p id="precise_lower_text"></p>
+        </div>
+      </td>
+      <td width="50%">
+        <div align="center">
+          <p>Monte Carlo simulation results</p>
+          <p id="simulation_upper_text"></p>
+          <div id="simulation_chart"></div>
+          <p id="simulation_lower_text"></p>
+        </div>
+      </td>
+    </tr>
+  </table>
+
+  <script type="py" src="./py/confidence/controller.py" config="./pyscript.toml"></script>
 </body>
 </html>
