--- a/confidence.html
+++ b/confidence.html
@@ -20,7 +20,8 @@
         <input type="number" min="1" max="3" step="1" name="unbreaking_input" id="unbreaking_input"/>
 
         <p>Enter confidence level in percents: from 0.1 to 100</p>
-        <input type="number" min="0.1" max="100" placeholder="95% by default" name="confidence_input" id="confidence_input"/>
+        <input type="number" min="0.1" max="100" step="any" placeholder="95% by default" name="confidence_input" id="confidence_input"
+          style="width:15ch"/>
       </td>
       <td style="vertical-align: top">
         <p>Enter number of experiments for the simulation: (optional)</p>
